--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>regression-js example</title>
-		<script src="http://code.jquery.com/jquery.min.js"></script>
-		<script src="http://Tom-Alexander.github.io/regression-js/jquery.flot.js"></script>
+		<script src="https://code.jquery.com/jquery.min.js"></script>
+		<script src="https://Tom-Alexander.github.io/regression-js/jquery.flot.js"></script>
 		<script src="../build/regression.min.js"></script>
 
 		<script>
