--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 
 			// Data
 			var data = [
-
-[0.0500,	  7522736], 
-[0.0250,	  4539434], 
-[0.0125,	  2656761], 
-[0.0042,	  729818], 
-[0.0009,	  236309], 
-[0.0000,	  67069] 
+				[0.0500,	  7522736], 
+				[0.0250,	  4539434], 
+				[0.0125,	  2656761], 
+				[0.0042,	  729818], 
+				[0.0009,	  236309], 
+				[0.0000,	  67069] 
 			];
 
 			// do the regression (polynomial to the third degree)
@@ -32,6 +31,7 @@
 
 			// print the equation out
 			$('h2').text(myRegression.string);
+			$('h2').text('r2 = ' + myRegression.r2);			
 
 		});
 
