--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			]);
 
 			// print the equation out
-			$('h2').text(myRegression.string + 'r2 = ' + myRegression.r2);
+			$('h2').text(myRegression.equation + ', r2 = ' + myRegression.r2);
 		});
 
 		</script>
