--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				[0.0000,	  67069] 
 			];
 
-			// do the regression (polynomial to the third degree)
+			// do the regression (polynomial to the 2nd degree)
 			var myRegression = regression('polynomial', data, 2);
 
 			// Plot the result
@@ -30,7 +30,7 @@
 			]);
 
 			// print the equation out
-			$('h2').text(myRegression.equation + ', r2 = ' + myRegression.r2);
+			$('h2').text(myRegression.equation + '&#160&#160r2 = ' + myRegression.r2);
 		});
 
 		</script>
