--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			]);
 
 			// print the equation out
-			$('h4').text(myRegression.equation + '&#160&#160r2 = ' + myRegression.r2);
+			$('h4').text(myRegression.equation, 'r2 = ' + myRegression.r2);
 		});
 
 		</script>
